modification of cv.

--- a/src/cv/cv.tex
+++ b/src/cv/cv.tex
@@ -24,7 +24,7 @@ peng-fu@uiowa.edu\\
 %% \
 
 \begin{itemize}
-\item   Ph.D. Department of Computer Science, the University of Iowa, Iowa City, USA. Expected June 2014.
+\item   Ph.D. Department of Computer Science, the University of Iowa, Iowa City, USA. Expected graduation: June 2014.
   \item B.Eng. School of Computer Science, Huazhong University of Science and Technology, Wuhan, China. July 2009.
 \end{itemize}
 
@@ -32,15 +32,15 @@ peng-fu@uiowa.edu\\
 \section*{Research Areas}
 Type theory \`a la Curry and lambda calculus, with applications to interactive theorem proving and functional programming language. 
 
-\section*{Dissertation Topic}
-``Lambda Encoding in Type Theory \`a la Curry'', Peng Fu, expected to defend in June, 2014.
+%% \section*{Dissertation Topic}
+%% ``Lambda Encoding in Type Theory \`a la Curry''%, Peng Fu, expected to defend in June, 2014.
 
-\section*{Publications}
+\section*{Research Articles}
 
 \begin{enumerate}
-\item ``A Framework for Internalizing Relations into Type Theory'' Peng Fu, Aaron Stump, Jeff Vaughan. PSATTT'11: International Workshop on Proof-Search in Axiomatic Theories and Type Theories (2011). 
-\item ``Church Encoding with Dependent Type'', Peng Fu, Aaron Stump. planning.
-\item ``Dependently-typed Programming with Scott Encoding '' Peng Fu, Aaron Stump. planning.
+\item ``A Framework for Internalizing Relations into Type Theory''. Peng Fu, Aaron Stump, Jeff Vaughan. Accepted. PSATTT'11: International Workshop on Proof-Search in Axiomatic Theories and Type Theories (2011). 
+\item ``Church Encoding with Dependent Type''. Peng Fu, Aaron Stump. Submitted. 2013.
+\item ``Dependently-typed Programming with Scott Encoding ''. Peng Fu, Aaron Stump. Submitted. 2013.
   
 \end{enumerate}
 
@@ -48,10 +48,10 @@ Type theory \`a la Curry and lambda calculus, with applications to interactive t
 
 \begin{enumerate}
 
-\item ``A Framework for Internalizing Relations into Type Theory'', August 2011, PSATTT workshop, Wroclaw. Poland. 
-\item ``Dependent Lambda Encoding with Self Types'', September 2012, Midwest Verification Days, Lawrence, KS.
-\item ``Lambda Encoding, Types and Confluence. '', May 2013, Comprehensive Exam, Iowa City, IA.
-\item ``Dependent Lambda Encoding with Self Types'', September 2013, ACM SIGPLAN Workshop on Dependently-Typed Programming(DTP), Boston, MA.
+\item ``A Framework for Internalizing Relations into Type Theory''. August 2011, PSATTT workshop, Wroclaw. Poland. 
+\item ``Dependent Lambda Encoding with Self Types''. September 2012, Midwest Verification Days, Lawrence, KS.
+\item ``Lambda Encoding, Types and Confluence''. May 2013, Ph.D. Comprehensive Exam, Iowa City, IA.
+\item ``Dependent Lambda Encoding with Self Types''. September 2013, ACM SIGPLAN Workshop on Dependently-Typed Programming(DTP), Boston, MA.
 \end{enumerate}
 
 \section*{Academia Expereince}
