--- a/src/notes/notes.tex
+++ b/src/notes/notes.tex
@@ -12,29 +12,29 @@
 
 \section*{Notes}
 \begin{itemize}
-\item N001: Reducibility Method for Call-by-Value Simply Typed Lambda Calculus, March 2010. \href{here}{[PDF]}
+\item N001: Reducibility Method for Call-by-Value Simply Typed Lambda Calculus, March 2010. [\href{../../document/notes/reducibility-stlc.pdf}{PDF}]
 
-\item N002: Subtyping Relation as Reducibility Set Inclusion, March 2010. [PDF]
+\item N002: Subtyping Relation as Reducibility Set Inclusion, March 2010. [\href{../../document/notes/subtyping-st.pdf}{PDF}]
 
-\item N003: Reducibility Method for Call-by-Value System F, June 2010. [PDF]
+\item N003: Reducibility Method for Call-by-Value System F, June 2010. [\href{../../document/notes/system-f-iii.pdf}{PDF}]
 
-\item N004: Type Preservation for System F \`a la Curry, 2011. [PDF]
+\item N004: Type Preservation for System F \`a la Curry, 2011. [\href{../../document/notes/systemf.pdf}{PDF}] 
 
-\item N005: A Novel Rewriting Approach to System F \`a la Curry, 2011. [PDF]
+\item N005: A Novel Rewriting Approach to System F \`a la Curry, 2011. [\href{../../document/notes/side-proj.pdf}{PDF}] 
 
-\item N006: A Study Note on Quantified Modal Logic, 2011. [PDF]
+\item N006: A Study Note on Quantified Modal Logic, 2011. [\href{../../document/notes/kripke-models.pdf}{PDF}]
 
-\item N007: Confluence of Lambda Calculus Modulo Mu Equivalence. Nov 2012. [PDF]
+\item N007: Confluence of Lambda Calculus Modulo Mu Equivalence. Nov 2012. [\href{../../document/notes/conf-lambda-mu-I.pdf}{PDF}]
 
 \noindent  \textbf{Remarks}: It turns out this note contain an error similar to the one pointed out in Barendregt's Lambda book's exercise 11.5.4. More specifically, the $t_3$ in lemma 8 can not be found in some situation. 
 
-\item N008: On Program Verification and Language Design, Nov 2012. [PDF]
+%%\item N008: On Program Verification and Language Design, Nov 2012. [\href{here}{PDF}]
 
-\item N009: Confluence for Local Lambda-Mu Calculus, July 2013. [PDF]
+\item N008: Confluence for Local Lambda-Mu Calculus, July 2013. [\href{../../document/notes/conf-lambda-mu-II.pdf}{PDF}]
 
 \noindent \textbf{Remarks}: This is the revised version to deal with the confluence problem arise in N007, the proof is inspired by Thérèse Hardin's interpretation method. 
 
-\item N010: Type Preservation for Curry Style $\mathbf{F}_{\omega}$, July 2013. [PDF]
+\item N009: Type Preservation for Curry Style $\mathbf{F}_{\omega}$, July 2013. [\href{../../document/notes/fomega-presv.pdf}{PDF}]
 
 \noindent \textbf{Remarks}: This note straightforwardly extends Barendregt's method of proving type preservation for Curry style system F(N004) to $\mathbf{F}_{\omega}$. 
 
@@ -45,11 +45,11 @@
 \section*{Articles}
 
 \begin{itemize}
-\item A001: A Rewriting Formulation of Curry Style System F. [PDF]
+\item A001: A Rewriting Formulation of Curry Style System F. [\href{../../document/notes/rewrite-f.pdf}{PDF}]
 
 \noindent Peng Fu, Aaron Stump. Jan 2012.
 
-\item A002: Lambda Encoding, Types and Confluence. [PDF]
+\item A002: Lambda Encoding, Types and Confluence. [\href{../../document/notes/comp-exam.pdf}{PDF}]
 
 \noindent Peng Fu. May 2013.
 
