--- a/src/notes/notes.tex
+++ b/src/notes/notes.tex
@@ -1,6 +1,8 @@
 \documentclass[10pt]{article}
 \usepackage[margin=3cm]{geometry}
 \usepackage{hyperref}
+\usepackage{amsmath}
+\usepackage{amssymb} 
 \title{\bfseries\Large Notes and Articles}
 %\author{peng-fu@uiowa.edu}
 \date{}
@@ -54,6 +56,13 @@
 \noindent Peng Fu. May 2013.
 
 \noindent \textbf{Remarks}: This is my comprehensive exam paper. 
+
+\item A003: Lambda Encoding with Comprehension. [\href{../../document/notes/comprehension.pdf}{PDF}]
+
+\noindent Peng Fu. Oct 2013.
+
+\noindent \textbf{Remarks}: Last important Chapter of my dissertation, I would like it to be
+a single document. 
 
 
 \end{itemize}
