delete the submission.

--- a/src/cv/cv.tex
+++ b/src/cv/cv.tex
@@ -39,8 +39,8 @@ Type theory \`a la Curry and lambda calculus, with applications to interactive t
 
 \begin{enumerate}
 \item ``A Framework for Internalizing Relations into Type Theory''. Peng Fu, Aaron Stump, Jeff Vaughan. Accepted. PSATTT'11: International Workshop on Proof-Search in Axiomatic Theories and Type Theories (2011). 
-\item ``Church Encoding with Dependent Type''. Peng Fu, Aaron Stump. Submitted. 2013.
-\item ``Dependently-typed Programming with Scott Encoding ''. Peng Fu, Aaron Stump. Submitted. 2013.
+\item ``Church Encoding with Dependent Type''. Peng Fu, Aaron Stump. 2013.
+\item ``Dependently-typed Programming with Scott Encoding ''. Peng Fu, Aaron Stump. 2013.
   
 \end{enumerate}
 
