--- a/src/notes/notes.tex
+++ b/src/notes/notes.tex
@@ -47,6 +47,9 @@
 \section*{Articles}
 
 \begin{itemize}
+
+\item A000: A Framework for Internalizing Relations into Type Theory''. Peng Fu, Aaron Stump, Jeff Vaughan. PSATTT'11: International Workshop on Proof-Search in Axiomatic Theories and Type Theories (2011). [\href{../../document/papers/psattt-paper.pdf}{pdf}]
+
 \item A001: A Rewriting Formulation of Curry Style System F. [\href{../../document/notes/rewrite-f.pdf}{PDF}]
 
 \noindent Peng Fu, Aaron Stump. Jan 2012.
@@ -63,6 +66,10 @@
 
 \noindent \textbf{Remarks}: Last important Chapter of my dissertation, I would like it to be
 a single document. 
+
+\item A004: Dependently-typed Programming with Scott Encoding. Peng Fu, Aaron Stump. 2013. [\href{../../document/papers/scott-dep.pdf}{pdf}]
+
+\item A005: Church Encoding with Dependent Type. Peng Fu, Aaron Stump. 2013. [\href{../../document/papers/church-dep.pdf}{pdf}]
 
 
 \end{itemize}
