modified publication page

--- a/src/publications/publications.tex
+++ b/src/publications/publications.tex
@@ -10,23 +10,26 @@
 
 \vspace{20pt}
 
-\section*{Work in Progress}
+%% \section*{Work in Progress}
 
-\begin{enumerate}
-\item ``Lambda Encoding in Type Theory \`a la Curry''. Ph.D. Dissertation. Peng Fu. 
-\end{enumerate}
+%% \begin{enumerate}
+%% \item ``Lambda Encoding in Type Theory \`a la Curry''. Ph.D. Dissertation. Peng Fu. 
+%% \end{enumerate}
 
 \section*{Submitted Articles}
 
 \begin{enumerate}
-\item ``Church Encoding with Dependent Type''. Peng Fu, Aaron Stump. Submitted. 2013. [\href{../../document/papers/esop-2013.pdf}{pdf}]
-\item ``Dependently-typed Programming with Scott Encoding ''. Peng Fu, Aaron Stump. Submitted. 2013. [\href{../../document/papers/plpv-2013.pdf}{pdf}]
+\item ``Self Types for Dependently Typed Lambda Encodings''. Peng Fu, Aaron Stump. Submitted. RTA-TLCA 2014. [\href{../../document/papers/rta-tlca.pdf}{Extended Version}]
 
 \end{enumerate}
 
 \section*{Publications}
 
 \begin{enumerate}
+\item ``Equational Reasoning about Programs with General Recursion and Call-by-value Semantics''. Garrin Kimmell, Aaron Stump, Harley D. Eades III, Peng Fu, Tim Sheard, Stephanie Weirich, Chris Casinghino, Vilhelm Sjoberg, Nathan Collins, Ki Yung Ahn. Progress in Informatics, No. 10, March 2013, pages 19-46. Journal version of PLPV '12 paper. [\href{../../document/papers/pi13.pdf}{pdf}] 
+\item ``Irrelevance, Heterogeneous Equality, and Call-by-value Dependent Type Systems''. Vilhelm Sj\"oberg,Chris Casinghino, Ki Yung Ahn, Nathan Collins, Harley D. Eades III, Peng Fu, Garrin Kimmell, Tim Sheard, Aaron Stump, Stephanie Weirich. MSFP 2012. [\href{../../document/papers/msfp12.pdf}{pdf}] 
+\item ``Equational Reasoning about Programs with General Recursion and Call-by-value Semantics''. Garrin Kimmell, Aaron Stump, Harley D. Eades III, Peng Fu, Tim Sheard, Stephanie Weirich, Chris Casinghino, Vilhelm Sj\"oberg, Nathan Collins, Ki Yung Ahn. PLPV 2012. [\href{../../document/papers/plpv12.pdf}{pdf}] 
+
 \item ``A Framework for Internalizing Relations into Type Theory''. Peng Fu, Aaron Stump, Jeff Vaughan. Accepted. PSATTT'11: International Workshop on Proof-Search in Axiomatic Theories and Type Theories (2011). [\href{../../document/papers/psattt-paper.pdf}{pdf}]
   
 \end{enumerate}
