fix index and cv

--- a/src/cv/cv.tex
+++ b/src/cv/cv.tex
@@ -19,45 +19,48 @@ peng-fu@uiowa.edu\\
 \vspace{20pt}
 
 \section*{Education}
-%% addddddddddddddddddddddddddddddddd dafffffffffffffffffffffffffffffffffffffffffffff uuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuu
-
-%% \
 
 \begin{itemize}
-\item   Ph.D. Department of Computer Science, the University of Iowa, Iowa City, USA. Expected graduation: June 2014.
+\item   Ph.D. Department of Computer Science, the University of Iowa, Iowa City, USA. 
+
+  Dissertation: Lambda Encoding in Type Theory, Advisor: Aaron Stump
+  
+  Expected graduation: July 2014.
   \item B.Eng. School of Computer Science, Huazhong University of Science and Technology, Wuhan, China. July 2009.
 \end{itemize}
 
 
 \section*{Research Areas}
-Type theory \`a la Curry and lambda calculus, with applications to interactive theorem proving and functional programming language. 
+Lambda calculus and type theory, with applications to interactive theorem proving and functional programming language. 
 
-%% \section*{Dissertation Topic}
-%% ``Lambda Encoding in Type Theory \`a la Curry''%, Peng Fu, expected to defend in June, 2014.
+\section*{Publications}
 
-\section*{Research Articles}
+\begin{itemize}
+\item ``A Framework for Internalizing Relations into Type Theory''. Peng Fu, Aaron Stump, Jeff Vaughan. Accepted. PSATTT'11: International Workshop on Proof-Search in Axiomatic Theories and Type Theories (2011).
 
-\begin{enumerate}
-\item ``A Framework for Internalizing Relations into Type Theory''. Peng Fu, Aaron Stump, Jeff Vaughan. Accepted. PSATTT'11: International Workshop on Proof-Search in Axiomatic Theories and Type Theories (2011). 
-\item ``Church Encoding with Dependent Type''. Peng Fu, Aaron Stump. 2013.
-\item ``Dependently-typed Programming with Scott Encoding ''. Peng Fu, Aaron Stump. 2013.
+  \item ``Irrelevance, Heterogeneous Equality, and Call-by-value Dependent Type Systems''. Vilhelm Sj\"oberg,Chris Casinghino, Ki Yung Ahn, Nathan Collins, Harley D. Eades III, Peng Fu, Garrin Kimmell, Tim Sheard, Aaron Stump, Stephanie Weirich. MSFP 2012.
+
+\item ``Equational Reasoning about Programs with General Recursion and Call-by-value Semantics''. Garrin Kimmell, Aaron Stump, Harley D. Eades III, Peng Fu, Tim Sheard, Stephanie Weirich, Chris Casinghino, Vilhelm Sj\"oberg, Nathan Collins, Ki Yung Ahn. PLPV 2012. 
   
-\end{enumerate}
+\item ``Equational Reasoning about Programs with General Recursion and Call-by-value Semantics''. Garrin Kimmell, Aaron Stump, Harley D. Eades III, Peng Fu, Tim Sheard, Stephanie Weirich, Chris Casinghino, Vilhelm Sjoberg, Nathan Collins, Ki Yung Ahn. Progress in Informatics, No. 10, March 2013, pages 19-46. Journal version of PLPV '12 paper. 
+  
+\end{itemize}
 
 \section*{Selected Talks}
 
-\begin{enumerate}
+\begin{itemize}
 
 \item ``A Framework for Internalizing Relations into Type Theory''. August 2011, PSATTT workshop, Wroclaw. Poland. 
 \item ``Dependent Lambda Encoding with Self Types''. September 2012, Midwest Verification Days, Lawrence, KS.
 \item ``Lambda Encoding, Types and Confluence''. May 2013, Ph.D. Comprehensive Exam, Iowa City, IA.
 \item ``Dependent Lambda Encoding with Self Types''. September 2013, ACM SIGPLAN Workshop on Dependently-Typed Programming(DTP), Boston, MA.
-\end{enumerate}
+\end{itemize}
 
 \section*{Academia Expereince}
 
 \begin{itemize}
 \item Research Assistant, Supervisor: Aaron Stump, 2010 spring- 2013 summer. Department of Computer Science, The University of Iowa.
+\item Teaching Assistant,  ``Programming Language Concepts'', 2014 Spring. Department of Computer Science, The University of Iowa.
 \item Teaching Assistant,  ``Object-Oriented Software Development '', 2013 Fall. Department of Computer Science, The University of Iowa.
 \item Teaching Assistant,  ``Programming Language Concepts'', 2013 Spring. Department of Computer Science, The University of Iowa.
   \item Teaching Assistant, ``Computer Networking'', 2009 Fall. Department of Computer Science, The University of Iowa.
