--- a/src/cv/cv.tex
+++ b/src/cv/cv.tex
@@ -1,68 +1,98 @@
-\documentclass[10pt]{article}
+\documentclass[11pt]{article}
 \usepackage[margin=3cm]{geometry}
 \usepackage{hyperref}
-\title{\bfseries\Large Peng Fu - Curriculum Vitae}
-%\author{peng-fu@uiowa.edu}
-\date{}
 \begin{document}
-\maketitle
-\vspace{-4em}
 \begin{center}
-\begin{minipage}[c]{0.48\textwidth}
+{\Large{\bfseries Peng Fu}}
+
+\
+
 Department of Computer Science\\
 The University of Iowa\\
 Iowa City, IA 52242-1419\\
-peng-fu@uiowa.edu\\
-\url{http://homepage.cs.uiowa.edu/~pfu/}
-\end{minipage}
+Phone: 218-387-4409\\
+Email: peng-fu@uiowa.edu\\
+%\url{http://homepage.cs.uiowa.edu/~pfu/}
+
 \end{center}
-\vspace{20pt}
+
+%\title{\bfseries\Large Peng Fu}
+%\author{peng-fu@uiowa.edu}
+%% \date{}
+
+%% \maketitle
+%% \vspace{-4em}
+%% \begin{center}
+%% \begin{minipage}[c]{0.48\textwidth}
+%% Department of Computer Science\\
+%% The University of Iowa\\
+%% Iowa City, IA 52242-1419\\
+%% peng-fu@uiowa.edu\\
+%% \url{http://homepage.cs.uiowa.edu/~pfu/}
+%% \end{minipage}
+%% \end{center}
+%% \vspace{20pt}
 
 \section*{Education}
 
 \begin{itemize}
-\item   Ph.D. Department of Computer Science, the University of Iowa, Iowa City, USA. 
-
-  Dissertation: Lambda Encoding in Type Theory, Advisor: Aaron Stump
-  
-  Expected graduation: July 2014.
-  \item B.Eng. School of Computer Science, Huazhong University of Science and Technology, Wuhan, China. July 2009.
+\item Ph.D. Department of Computer Science, the University of Iowa, Iowa City, USA. 
+  Dissertation: \textit{Lambda Encoding in Type Theory}. August 2014. %GPA: 3.68/4.
+  \item B.Eng. School of Computer Science, Huazhong University of Science and Technology, Wuhan, China. July 2009. %Accumulated grade: 84.6/100.
 \end{itemize}
-
-
 \section*{Research Areas}
-Lambda calculus and type theory, with applications to interactive theorem proving and functional programming language. 
-
+Lambda calculus and type theory, with applications to interactive theorem proving and functional programming language.
 \section*{Publications}
 
 \begin{itemize}
-\item ``A Framework for Internalizing Relations into Type Theory''. Peng Fu, Aaron Stump, Jeff Vaughan. Accepted. PSATTT'11: International Workshop on Proof-Search in Axiomatic Theories and Type Theories (2011).
-
-  \item ``Irrelevance, Heterogeneous Equality, and Call-by-value Dependent Type Systems''. Vilhelm Sj\"oberg,Chris Casinghino, Ki Yung Ahn, Nathan Collins, Harley D. Eades III, Peng Fu, Garrin Kimmell, Tim Sheard, Aaron Stump, Stephanie Weirich. MSFP 2012.
-
+  \item ``Self Types for Dependently Typed Lambda Encodings''. Peng Fu, Aaron Stump. RTA-TLCA 2014: Joint 25th International Conference on Rewriting Techniques and Applications and 12th International Conference on Typed Lambda Calculi and Applications. 
+  \item ``Equational Reasoning about Programs with General Recursion and Call-by-value Semantics''. Garrin Kimmell, Aaron Stump, Harley D. Eades III, Peng Fu, Tim Sheard, Stephanie Weirich, Chris Casinghino, Vilhelm Sjoberg, Nathan Collins, Ki Yung Ahn. Progress in Informatics, No. 10, March 2013, pages 19-46. Journal version of PLPV '12 paper. 
 \item ``Equational Reasoning about Programs with General Recursion and Call-by-value Semantics''. Garrin Kimmell, Aaron Stump, Harley D. Eades III, Peng Fu, Tim Sheard, Stephanie Weirich, Chris Casinghino, Vilhelm Sj\"oberg, Nathan Collins, Ki Yung Ahn. PLPV 2012. 
-  
-\item ``Equational Reasoning about Programs with General Recursion and Call-by-value Semantics''. Garrin Kimmell, Aaron Stump, Harley D. Eades III, Peng Fu, Tim Sheard, Stephanie Weirich, Chris Casinghino, Vilhelm Sjoberg, Nathan Collins, Ki Yung Ahn. Progress in Informatics, No. 10, March 2013, pages 19-46. Journal version of PLPV '12 paper. 
-  
+\item ``Irrelevance, Heterogeneous Equality, and Call-by-value Dependent Type Systems''. Vilhelm Sj\"oberg,Chris Casinghino, Ki Yung Ahn, Nathan Collins, Harley D. Eades III, Peng Fu, Garrin Kimmell, Tim Sheard, Aaron Stump, Stephanie Weirich. MSFP 2012.
+\item ``A Framework for Internalizing Relations into Type Theory''. Peng Fu, Aaron Stump, Jeff Vaughan. PSATTT'11: International Workshop on Proof-Search in Axiomatic Theories and Type Theories (2011).
 \end{itemize}
 
-\section*{Selected Talks}
-
+\section*{Projects}
 \begin{itemize}
+\item The Gottlob System (December 2013 - 2014). A prototype system for verified programming and theorem proving. Source code available from:  \url{https://github.com/Fermat/Gottlob}
+\item The TRELLYS Project (2010 - 2013). Contributions: 
+  \begin{enumerate}
+  \item Implemented a simple type checker for a core language called SepCore. Source code (in Haskell) available from: 
+    
+    \noindent \url{https://code.google.com/p/trellys/source/browse/trunk/lib/sep-core/}
+  \item Implemented a dependently typed version of AVL tree in Iowa-Trellys. Source code available from: 
+    
+    \noindent \url{https://code.google.com/p/trellys/source/browse/trunk/lib/sepp/Tests/unittests/avltree2.sep} 
+  \end{enumerate}
 
-\item ``A Framework for Internalizing Relations into Type Theory''. August 2011, PSATTT workshop, Wroclaw. Poland. 
-\item ``Dependent Lambda Encoding with Self Types''. September 2012, Midwest Verification Days, Lawrence, KS.
-\item ``Lambda Encoding, Types and Confluence''. May 2013, Ph.D. Comprehensive Exam, Iowa City, IA.
-\item ``Dependent Lambda Encoding with Self Types''. September 2013, ACM SIGPLAN Workshop on Dependently-Typed Programming(DTP), Boston, MA.
 \end{itemize}
 
-\section*{Academia Expereince}
+\section*{Teaching Experience}
 
 \begin{itemize}
-\item Research Assistant, Supervisor: Aaron Stump, 2010 spring- 2013 summer. Department of Computer Science, The University of Iowa.
-\item Teaching Assistant,  ``Programming Language Concepts'', 2014 Spring. Department of Computer Science, The University of Iowa.
+\item Teaching Assistant,  ``Programming Language Concepts'', 2013 Spring, 2014 Spring. Department of Computer Science, The University of Iowa.
 \item Teaching Assistant,  ``Object-Oriented Software Development '', 2013 Fall. Department of Computer Science, The University of Iowa.
-\item Teaching Assistant,  ``Programming Language Concepts'', 2013 Spring. Department of Computer Science, The University of Iowa.
+%% \item Research Assistant, 2010 spring - 2013 spring, TRELLYS project. Supervisor: Prof. Aaron Stump.
   \item Teaching Assistant, ``Computer Networking'', 2009 Fall. Department of Computer Science, The University of Iowa.
 \end{itemize}
+
+\section*{Additional Skills}
+Haskell (intermediate, since 2012), C (intermediate, since 2006), Java (intermediate, since 2007). 
+%
+\section*{References\footnote{Letters are available upon request.}}
+\begin{itemize}
+\item Professor Aaron Stump(advisor), Computer Science, University of Iowa. 
+\item Professor Cesare Tinelli, Computer Science, University of Iowa. 
+\item Professor Tim Sheard, Computer Science, Portland State University. 
+\end{itemize}
+
+% \section*{Selected Talks}
+
+%% \begin{itemize}
+%% \item ``Dependent Lambda Encoding with Self Types''. September 2013, ACM SIGPLAN Workshop on Dependently-Typed Programming(DTP), Boston, MA.
+%% %% \item ``Dependent Lambda Encoding with Self Types''. September 2012, Midwest Verification Days, Lawrence, KS.
+%% \item ``A Framework for Internalizing Relations into Type Theory''. August 2011, PSATTT workshop, Wroclaw. Poland. 
+
+%% \end{itemize}
+
 \end{document}
