add dissertation to notes

--- a/src/notes/notes.tex
+++ b/src/notes/notes.tex
@@ -3,6 +3,7 @@
 \usepackage{hyperref}
 \usepackage{amsmath}
 \usepackage{amssymb} 
+\usepackage{csquotes}
 \title{\bfseries\Large Notes and Articles}
 %\author{peng-fu@uiowa.edu}
 \date{}
@@ -12,6 +13,7 @@
 
 \vspace{20pt}
 
+
 \section*{Notes}
 \begin{itemize}
 \item N001: Reducibility Method for Call-by-Value Simply Typed Lambda Calculus, March 2010. [\href{../../document/notes/reducibility-stlc.pdf}{pdf}]
@@ -20,25 +22,25 @@
 
 \item N003: Reducibility Method for Call-by-Value System F, June 2010. [\href{../../document/notes/system-f-iii.pdf}{pdf}]
 
-\item N004: Type Preservation for System F \`a la Curry, 2011. [\href{../../document/notes/systemf.pdf}{pdf}] 
+\item N004: Type Preservation for System F a la Curry, 2011. [\href{../../document/notes/systemf.pdf}{pdf}] 
 
-\item N005: A Novel Rewriting Approach to System F \`a la Curry, 2011. [\href{../../document/notes/side-proj.pdf}{pdf}] 
+\item N005: A Novel Rewriting Approach to System F a la Curry, 2011. [\href{../../document/notes/side-proj.pdf}{pdf}] 
 
 \item N006: A Study Note on Quantified Modal Logic, 2011. [\href{../../document/notes/kripke-models.pdf}{pdf}]
 
 \item N007: Confluence of Lambda Calculus Modulo Mu Equivalence. Nov 2012. [\href{../../document/notes/conf-lambda-mu-I.pdf}{pdf}]
 
-\noindent  \textbf{Remarks}: It turns out this note contain an error similar to the one pointed out in Barendregt's Lambda book's exercise 11.5.4. More specifically, the $t_3$ in lemma 8 can not be found in some situation. 
+\noindent  \textbf{Remarks}: It turns out this note contain an error similar to the one pointed out in exercise 11.5.4 in the Barendregt-lambda-book. More specifically, the $t_3$ in lemma 8 can not be found in some situation. 
 
 %%\item N008: On Program Verification and Language Design, Nov 2012. [\href{here}{PDF}]
 
 \item N008: Confluence for Local Lambda-Mu Calculus, July 2013. [\href{../../document/notes/conf-lambda-mu-II.pdf}{pdf}]
 
-\noindent \textbf{Remarks}: This is the revised version to deal with the confluence problem arise in N007, the proof is inspired by Thérèse Hardin's interpretation method. 
+\noindent \textbf{Remarks}: This is the revised version to deal with the confluence problem arise in N007, the proof is inspired by the interpretation method. 
 
-\item N009: Type Preservation for Curry Style $\mathbf{F}_{\omega}$, July 2013. [\href{../../document/notes/fomega-presv.pdf}{pdf}]
+\item N009: Type Preservation for Curry Style F-omega, July 2013. [\href{../../document/notes/fomega-presv.pdf}{pdf}]
 
-\noindent \textbf{Remarks}: This note straightforwardly extends Barendregt's method of proving type preservation for Curry style system F(N004) to $\mathbf{F}_{\omega}$. 
+\noindent \textbf{Remarks}: This note straightforwardly extends the method(by Barendregt) of proving type preservation for Curry style system F (N004) to F-omega
 
 
   
@@ -69,4 +71,10 @@
 
 
 \end{itemize}
+
+\section*{Dissertation}
+\begin{itemize}
+\item Lambda encoding in type theory. May 2014. [\href{../../document/notes/dissertation.pdf}{pdf}]
+\end{itemize}
+
 \end{document}
