--- a/src/talks/talks.tex
+++ b/src/talks/talks.tex
@@ -9,14 +9,14 @@
 \vspace{-4em}
 
 \vspace{20pt}
+\section*{Talks}
+\begin{itemize}
 
-\begin{enumerate}
-
-\item ``A Framework for Internalizing Relations into Type Theory''. August 2011, PSATTT workshop, Wroclaw. Poland. [\href{../../document/talks/psattt11-talk.pdf}{Slides}]
-\item ``Dependent Lambda Encoding with Self Types''. September 2012, Midwest Verification Days, Lawrence, KS. [\href{../../document/talks/mvd-2012.pdf}{Slides}]
-\item ``Lambda Encoding, Types and Confluence''. May 2013, Ph.D. Comprehensive Exam, Iowa City, IA. [\href{../../document/talks/comp.pdf}{Slides}]
-\item ``Dependent Lambda Encoding with Self Types''. September 2013, ACM SIGPLAN Workshop on Dependently-Typed Programming(DTP), Boston, MA. [\href{../../document/talks/dtp-2013.pdf}{Slides}]
-\end{enumerate}
+\item \textit{A Framework for Internalizing Relations into Type Theory}. August 2011, PSATTT workshop, Wroclaw. Poland. [\href{../../document/talks/psattt11-talk.pdf}{Slides}]
+\item \textit{Dependent Lambda Encoding with Self Types}. September 2012, Midwest Verification Days, Lawrence, KS. [\href{../../document/talks/mvd-2012.pdf}{Slides}]
+\item \textit{Lambda Encoding, Types and Confluence}. May 2013, Ph.D. Comprehensive Exam, Iowa City, IA. [\href{../../document/talks/comp.pdf}{Slides}]
+\item \textit{Dependent Lambda Encoding with Self Types}. September 2013, ACM SIGPLAN Workshop on Dependently-Typed Programming(DTP), Boston, MA. [\href{../../document/talks/dtp-2013.pdf}{Slides}]
+\end{itemize}
 
 
 
