add thesis talk and tlca talk.

--- a/src/talks/talks.tex
+++ b/src/talks/talks.tex
@@ -11,11 +11,13 @@
 \vspace{20pt}
 \section*{Talks}
 \begin{itemize}
-
-\item \textit{A Framework for Internalizing Relations into Type Theory}. August 2011, PSATTT workshop, Wroclaw. Poland. [\href{../../document/talks/psattt11-talk.pdf}{Slides}]
-\item \textit{Dependent Lambda Encoding with Self Types}. September 2012, Midwest Verification Days, Lawrence, KS. [\href{../../document/talks/mvd-2012.pdf}{Slides}]
+\item \textit{Self Types for Dependently Typed Lambda Encodings}. July 15, 2014, RTA-TLCA, Vienna, Austria. [\href{../../document/talks/tlca-rta-14.pdf}{Slides}]
+\item \textit{Lambda Encodings in Type Theory}. May 2, 2014, Dissertation Defense, Iowa City, Iowa. [\href{../../document/talks/thesis-talk.pdf}{Slides}]
 \item \textit{Lambda Encoding, Types and Confluence}. May 2013, Ph.D. Comprehensive Exam, Iowa City, IA. [\href{../../document/talks/comp.pdf}{Slides}]
 \item \textit{Dependent Lambda Encoding with Self Types}. September 2013, ACM SIGPLAN Workshop on Dependently-Typed Programming(DTP), Boston, MA. [\href{../../document/talks/dtp-2013.pdf}{Slides}]
+\item \textit{Dependent Lambda Encoding with Self Types}. September 2012, Midwest Verification Days, Lawrence, KS. [\href{../../document/talks/mvd-2012.pdf}{Slides}]
+
+\item \textit{A Framework for Internalizing Relations into Type Theory}. August 2011, PSATTT workshop, Wroclaw. Poland. [\href{../../document/talks/psattt11-talk.pdf}{Slides}]
 \end{itemize}
 
 
