--- a/src/cv/cv.tex
+++ b/src/cv/cv.tex
@@ -7,12 +7,11 @@
 
 \
 
-Department of Computer Science\\
-The University of Iowa\\
-Iowa City, IA 52242-1419\\
-Phone: 218-387-4409\\
-Email: peng-fu@uiowa.edu\\
-%\url{http://homepage.cs.uiowa.edu/~pfu/}
+School of Computing\\
+University of Dundee\\
+Dundee, Scotland \\
+Email: pfu@dundee.ac.uk\\
+Homepage: \url{http://staff.computing.dundee.ac.uk/pengfu/}
 
 \end{center}
 
@@ -36,12 +35,18 @@ Email: peng-fu@uiowa.edu\\
 \section*{Education}
 
 \begin{itemize}
-\item Ph.D. Department of Computer Science, the University of Iowa, Iowa City, USA. 
-  Dissertation: \textit{Lambda Encoding in Type Theory}. August 2014. %GPA: 3.68/4.
+\item Ph.D. Department of Computer Science, the University of Iowa, Iowa City, USA. August 2014. 
   \item B.Eng. School of Computer Science, Huazhong University of Science and Technology, Wuhan, China. July 2009. %Accumulated grade: 84.6/100.
 \end{itemize}
+
+\section*{Position}
+
+\begin{itemize}
+\item Postdoctorial Research Assistant, University of Dundee, Dundee, Scotland. Oct 2014.
+\end{itemize}
+
 \section*{Research Areas}
-Lambda calculus and type theory, with applications to interactive theorem proving and functional programming language.
+Type inference, lambda calculus, type theory, interactive theorem proving and functional programming language.
 \section*{Publications}
 
 \begin{itemize}
@@ -79,12 +84,12 @@ Lambda calculus and type theory, with applications to interactive theorem provin
 \section*{Additional Skills}
 Haskell (intermediate, since 2012), C (intermediate, since 2006), Java (intermediate, since 2007). 
 %
-\section*{References\footnote{Letters are available upon request.}}
-\begin{itemize}
-\item Professor Aaron Stump(advisor), Computer Science, University of Iowa. 
-\item Professor Cesare Tinelli, Computer Science, University of Iowa. 
-\item Professor Tim Sheard, Computer Science, Portland State University. 
-\end{itemize}
+%% \section*{References\footnote{Letters are available upon request.}}
+%% \begin{itemize}
+%% \item Professor Aaron Stump(advisor), Computer Science, University of Iowa. 
+%% \item Professor Cesare Tinelli, Computer Science, University of Iowa. 
+%% \item Professor Tim Sheard, Computer Science, Portland State University. 
+%% \end{itemize}
 
 % \section*{Selected Talks}
 
