--- a/src/notes/notes.tex
+++ b/src/notes/notes.tex
@@ -42,6 +42,10 @@
 
 \noindent \textbf{Remarks}: This note straightforwardly extends the method(by Barendregt) of proving type preservation for Curry style system F (N004) to F-omega
 
+\item N010: Type Class and Logic Programming with Term Matching, Nov 2014. [\href{../../document/notes/tm.pdf}{pdf}]
+
+\noindent \textbf{Remarks}: This note shows how one can have a notion of \textit{logic programming} based solely on term matching. 
+
 
   
 \end{itemize}
