--- a/src/publications/publications.tex
+++ b/src/publications/publications.tex
@@ -21,6 +21,8 @@
 \section*{Publications}
 
 \begin{itemize}
+\item \textit{Lambda encoding in type theory}. Dissertation, May 2014. [\href{../../document/papers/dissertation.pdf}{pdf}]
+
 \item \textit{Self Types for Dependently Typed Lambda Encodings}. Peng Fu, Aaron Stump. RTA-TLCA 2014. [\href{../../document/papers/rta-tlca.pdf}{Extended Version}]
 
 \item \textit{A Framework for Internalizing Relations into Type Theory}. Peng Fu, Aaron Stump, Jeff Vaughan. Accepted. PSATTT-2011: International Workshop on Proof-Search in Axiomatic Theories and Type Theories 2011. [\href{../../document/papers/psattt-paper.pdf}{pdf}]
