--- a/src/publications/publications.tex
+++ b/src/publications/publications.tex
@@ -21,7 +21,7 @@
 \section*{Publications}
 
 \begin{itemize}
-\item \textit{Lambda encoding in type theory}. Dissertation, May 2014. [\href{../../document/papers/dissertation.pdf}{pdf}]
+\item \textit{Lambda encodings in type theory}. Dissertation, May 2014. [\href{../../document/papers/dissertation.pdf}{pdf}]
 
 \item \textit{Self Types for Dependently Typed Lambda Encodings}. Peng Fu, Aaron Stump. RTA-TLCA 2014. [\href{../../document/papers/rta-tlca.pdf}{Extended Version}]
 
