add lopstr info

--- a/src/publications/publications.tex
+++ b/src/publications/publications.tex
@@ -21,6 +21,8 @@
 \section*{Publications}
 
 \begin{itemize}
+\item \textit{A Type-Theoretic Approach to Structural Resolution}. Peng Fu, Ekaterina Komendantskaya. Presentation LOPSTR 2015. [\href{../../document/papers/tm-lp.pdf}{Extended Version}]
+
 \item \textit{Lambda encodings in type theory}. Dissertation, May 2014. [\href{../../document/papers/dissertation.pdf}{pdf}]
 
 \item \textit{Self Types for Dependently Typed Lambda Encodings}. Peng Fu, Aaron Stump. RTA-TLCA 2014. [\href{../../document/papers/rta-tlca.pdf}{Extended Version}]
