--- a/src/talks/talks.tex
+++ b/src/talks/talks.tex
@@ -11,6 +11,8 @@
 \vspace{20pt}
 \section*{Talks}
 \begin{itemize}
+\item \textit{A Type-Theoretic Approach to Structural Resolution}. July 13, 2015, LOPSTR, Siena, Italy. [\href{../../document/talks/lopstr-2015.pdf}{Slides}]
+
 \item \textit{Self Types for Dependently Typed Lambda Encodings}. July 15, 2014, RTA-TLCA, Vienna, Austria. [\href{../../document/talks/rta-tlca-14.pdf}{Slides}]
 \item \textit{Lambda Encodings in Type Theory}. May 2, 2014, Dissertation Defense, Iowa City, Iowa. [\href{../../document/talks/thesis-talk.pdf}{Slides}]
 \item \textit{Lambda Encoding, Types and Confluence}. May 2013, Ph.D. Comprehensive Exam, Iowa City, IA. [\href{../../document/talks/comp.pdf}{Slides}]
