--- a/src/publications/publications.tex
+++ b/src/publications/publications.tex
@@ -21,7 +21,7 @@
 \section*{Publications}
 
 \begin{itemize}
-\item \textit{A Type-Theoretic Approach to Structural Resolution}. Peng Fu, Ekaterina Komendantskaya. Presentation LOPSTR 2015. [\href{../../document/papers/tm-lp.pdf}{Extended Version}]
+\item \textit{A Type-Theoretic Approach to Resolution}. Peng Fu, Ekaterina Komendantskaya. Submitted to LOPSTR 2015. [\href{../../document/papers/tm-lp.pdf}{Extended Version}]
 
 \item \textit{Lambda encodings in type theory}. Dissertation, May 2014. [\href{../../document/papers/dissertation.pdf}{pdf}]
 
