--- a/src/publications/publications.tex
+++ b/src/publications/publications.tex
@@ -21,13 +21,13 @@
 \section*{Publications}
 
 \begin{itemize}
-\item \textit{A Type-Theoretic Approach to Resolution}. Peng Fu, Ekaterina Komendantskaya. Submitted to LOPSTR 2015. [\href{../../document/papers/tm-lp.pdf}{Extended Version}]
+\item \textit{A Type-Theoretic Approach to Resolution}. Peng Fu, Ekaterina Komendantskaya. International Symposium on Logic-Based Program Synthesis and Transformation, LOPSTR 2015. [\href{../../document/papers/tm-lp.pdf}{Extended Version}]
 
 \item \textit{Lambda encodings in type theory}. Dissertation, May 2014. [\href{../../document/papers/dissertation.pdf}{pdf}]
 
-\item \textit{Self Types for Dependently Typed Lambda Encodings}. Peng Fu, Aaron Stump. RTA-TLCA 2014. [\href{../../document/papers/rta-tlca.pdf}{Extended Version}]
+\item \textit{Self Types for Dependently Typed Lambda Encodings}. Peng Fu, Aaron Stump. Joint Conference on Rewriting Techniques, Typed Lambda Calculi and Applications. RTA-TLCA 2014. [\href{../../document/papers/rta-tlca.pdf}{Extended Version}]
 
-\item \textit{A Framework for Internalizing Relations into Type Theory}. Peng Fu, Aaron Stump, Jeff Vaughan. Accepted. PSATTT-2011: International Workshop on Proof-Search in Axiomatic Theories and Type Theories 2011. [\href{../../document/papers/psattt-paper.pdf}{pdf}]
+\item \textit{A Framework for Internalizing Relations into Type Theory}. Peng Fu, Aaron Stump, Jeff Vaughan. International Workshop on Proof-Search in Axiomatic Theories and Type Theories, PSATTT-2011. [\href{../../document/papers/psattt-paper.pdf}{pdf}]
   
 \end{itemize}
 
