--- a/src/cv/cv.tex
+++ b/src/cv/cv.tex
@@ -7,7 +7,7 @@
 
 \
 
-School of Computing\\
+Computer Science\\
 University of Dundee\\
 Dundee, Scotland \\
 Email: pfu@dundee.ac.uk\\
@@ -46,43 +46,47 @@ Homepage: \url{http://staff.computing.dundee.ac.uk/pengfu/}
 \end{itemize}
 
 \section*{Research Areas}
-Type inference, lambda calculus, type theory, interactive theorem proving and functional programming language.
+Lambda calculus, type theory, interactive theorem proving and functional programming language.
 \section*{Publications}
 
 \begin{itemize}
-  \item ``Self Types for Dependently Typed Lambda Encodings''. Peng Fu, Aaron Stump. RTA-TLCA 2014: Joint 25th International Conference on Rewriting Techniques and Applications and 12th International Conference on Typed Lambda Calculi and Applications. 
-  \item ``Equational Reasoning about Programs with General Recursion and Call-by-value Semantics''. Garrin Kimmell, Aaron Stump, Harley D. Eades III, Peng Fu, Tim Sheard, Stephanie Weirich, Chris Casinghino, Vilhelm Sjoberg, Nathan Collins, Ki Yung Ahn. Progress in Informatics, No. 10, March 2013, pages 19-46. Journal version of PLPV '12 paper. 
-\item ``Equational Reasoning about Programs with General Recursion and Call-by-value Semantics''. Garrin Kimmell, Aaron Stump, Harley D. Eades III, Peng Fu, Tim Sheard, Stephanie Weirich, Chris Casinghino, Vilhelm Sj\"oberg, Nathan Collins, Ki Yung Ahn. PLPV 2012. 
-\item ``Irrelevance, Heterogeneous Equality, and Call-by-value Dependent Type Systems''. Vilhelm Sj\"oberg,Chris Casinghino, Ki Yung Ahn, Nathan Collins, Harley D. Eades III, Peng Fu, Garrin Kimmell, Tim Sheard, Aaron Stump, Stephanie Weirich. MSFP 2012.
-\item ``A Framework for Internalizing Relations into Type Theory''. Peng Fu, Aaron Stump, Jeff Vaughan. PSATTT'11: International Workshop on Proof-Search in Axiomatic Theories and Type Theories (2011).
+\item \textit{Proof Relevant Corecursive Resolution}. Peng Fu, Ekaterina Komendantskaya, Tom Schrijvers, Andrew Pond. International Symposium on Functional and Logic Programming, FLOPS 2016.
+\item \textit{A Type-Theoretic Approach to Resolution}. Peng Fu, Ekaterina Komendantskaya. International Symposium on Logic-Based Program Synthesis and Transformation, LOPSTR 2015.
+  \item \textit{Self Types for Dependently Typed Lambda Encodings}. Peng Fu, Aaron Stump. RTA-TLCA 2014: Joint 25th International Conference on Rewriting Techniques and Applications and 12th International Conference on Typed Lambda Calculi and Applications. 
+  \item \textit{Equational Reasoning about Programs with General Recursion and Call-by-value Semantics}. Garrin Kimmell, Aaron Stump, Harley D. Eades III, Peng Fu, Tim Sheard, Stephanie Weirich, Chris Casinghino, Vilhelm Sjoberg, Nathan Collins, Ki Yung Ahn. Progress in Informatics, No. 10, March 2013, pages 19-46. Journal version of PLPV '12 paper. 
+\item \textit{Equational Reasoning about Programs with General Recursion and Call-by-value Semantics}. Garrin Kimmell, Aaron Stump, Harley D. Eades III, Peng Fu, Tim Sheard, Stephanie Weirich, Chris Casinghino, Vilhelm Sj\"oberg, Nathan Collins, Ki Yung Ahn. PLPV 2012. 
+\item \textit{Irrelevance, Heterogeneous Equality, and Call-by-value Dependent Type Systems}. Vilhelm Sj\"oberg,Chris Casinghino, Ki Yung Ahn, Nathan Collins, Harley D. Eades III, Peng Fu, Garrin Kimmell, Tim Sheard, Aaron Stump, Stephanie Weirich. MSFP 2012.
+\item \textit{A Framework for Internalizing Relations into Type Theory}. Peng Fu, Aaron Stump, Jeff Vaughan. PSATTT'11: International Workshop on Proof-Search in Axiomatic Theories and Type Theories (2011).
 \end{itemize}
 
 \section*{Projects}
 \begin{itemize}
-\item The Gottlob System (December 2013 - 2014). A prototype system for verified programming and theorem proving. Source code available from:  \url{https://github.com/Fermat/Gottlob}
-\item The TRELLYS Project (2010 - 2013). Contributions: 
-  \begin{enumerate}
-  \item Implemented a simple type checker for a core language called SepCore. Source code (in Haskell) available from: 
+\item CoALP for type inference (2015 - ), PI: Ekaterina Komendantskaya. 
+\item Dissertation project: Gottlob System (December 2013 - 2014). A prototype system for verified programming and theorem proving. Source code available from:  \url{https://github.com/Fermat/Gottlob}
+\item The \textsc{Trellys} Project (2010 - 2013), PI: Aaron Stump, Tim Sheard, Stephanie Weirich. 
+  % \begin{enumerate}
+  % \item Implemented a simple type checker for a core language called SepCore. Source code (in Haskell) available from: 
     
-    \noindent \url{https://code.google.com/p/trellys/source/browse/trunk/lib/sep-core/}
-  \item Implemented a dependently typed version of AVL tree in Iowa-Trellys. Source code available from: 
+  %   \noindent \url{https://code.google.com/p/trellys/source/browse/trunk/lib/sep-core/}
+  % \item Implemented a dependently typed version of AVL tree in Iowa-Trellys. % Source code available from: 
     
-    \noindent \url{https://code.google.com/p/trellys/source/browse/trunk/lib/sepp/Tests/unittests/avltree2.sep} 
-  \end{enumerate}
+  %   % \noindent \url{https://code.google.com/p/trellys/source/browse/trunk/lib/sepp/Tests/unittests/avltree2.sep} 
+  % \end{enumerate}
 
 \end{itemize}
 
 \section*{Teaching Experience}
 
 \begin{itemize}
+\item Teaching Assistant,  ``Algorithm and AI'', 2015 Spring.  Computer Science, The University of Dundee.
 \item Teaching Assistant,  ``Programming Language Concepts'', 2013 Spring, 2014 Spring. Department of Computer Science, The University of Iowa.
 \item Teaching Assistant,  ``Object-Oriented Software Development '', 2013 Fall. Department of Computer Science, The University of Iowa.
 %% \item Research Assistant, 2010 spring - 2013 spring, TRELLYS project. Supervisor: Prof. Aaron Stump.
   \item Teaching Assistant, ``Computer Networking'', 2009 Fall. Department of Computer Science, The University of Iowa.
 \end{itemize}
 
-\section*{Additional Skills}
-Haskell (intermediate, since 2012), C (intermediate, since 2006), Java (intermediate, since 2007). 
+% \section*{Additional Skills}
+% Haskell (intermediate, since 2012), C (intermediate, since 2006), Java (intermediate, since 2007). 
 %
 %% \section*{References\footnote{Letters are available upon request.}}
 %% \begin{itemize}
